[tool.poetry]
name = "pygenpassword"
version = "0.1.0"
description = "A simple random password generator with cli tool and library."
authors = ["Alex Scott <magister@kfa.cx>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/magister990/pygenpassword"
repository = "https://github.com/magister990/pygenpassword.git"
keywords = ["password", "generator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
genpassword = "pygenpassword.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
